fix(style): overflow on message input

--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -164,6 +164,8 @@
 
     .rt-input-input,
     .DraftEditor-root {
+      overflow-x: hidden;
+      overflow-y: auto;
       padding: $padding-small 0;
       width: 100%;
     }
